refactor: async strategy has been fixed