@@ -3,17 +3,13 @@ package br.dev.a2;
 import br.dev.a2.provider.ProviderClientService;
 import io.quarkus.virtual.threads.VirtualThreads;
 import jakarta.enterprise.context.RequestScoped;
-import org.eclipse.microprofile.context.ManagedExecutor;
 
 import java.math.BigDecimal;
 import java.util.Collection;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.ExecutionException;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Future;
+import java.util.concurrent.*;
 import java.util.stream.Collectors;
 
 @RequestScoped
@@ -21,14 +17,11 @@ public class TicketService {
 
     private final ProviderClientService client;
     private final ExecutorService executorService;
-    private final ManagedExecutor managedExecutor;
 
     public TicketService(final ProviderClientService client,
-                         @VirtualThreads final ExecutorService executorService,
-                         final ManagedExecutor managedExecutor) {
+                         @VirtualThreads final ExecutorService executorService) {
         this.client = client;
         this.executorService = executorService;
-        this.managedExecutor = managedExecutor;
     }
 
 
@@ -70,28 +63,51 @@ public class TicketService {
         return ticketsFromCompany1;
     }
 
+
     /**
      * Fetch list os tickets, perform requests asynchronously using CompletableFutures
      *
      * @return List<Ticket>
      */
-    public List<Ticket> fetchTicketsAsync() {
+    public CompletableFuture<List<Ticket>> fetchTicketsAsync() {
+        var future = new CompletableFuture<List<Ticket>>();
 
         List<CompletableFuture<List<Ticket>>> ticketAvailabilityFromAllCompanies = List.of(
-                managedExecutor.supplyAsync(client::retrieveTicketAvailabilityFromClient1),
-                managedExecutor.supplyAsync(client::retrieveTicketAvailabilityFromClient2)
+                client.retrieveTicketAvailabilityFromClient1Async(),
+                client.retrieveTicketAvailabilityFromClient2Async()
         );
 
-        List<CompletableFuture<List<Ticket>>> companiesCalls =
-                ticketAvailabilityFromAllCompanies
-                        .stream()
-                        .toList();
+        CompletableFuture
+                .allOf(ticketAvailabilityFromAllCompanies.toArray(new CompletableFuture[0]))
+                .thenApply(tickets -> ticketAvailabilityFromAllCompanies.stream()
+                        .map(CompletableFuture::join)
+                        .flatMap(List::stream)
+                        .toList()
+                )
+                .whenComplete((response, err) -> {
+                    var futureResponse = response.stream()
+                            .collect(Collectors.groupingBy(Ticket::destination,
+                                    Collectors.mapping(Ticket::price, Collectors.toList())))
+                            .entrySet()
+                            .stream()
+                            .map(item ->
+                                    new Ticket(item.getKey(),
+                                            item.getValue()
+                                                    .stream()
+                                                    .min(BigDecimal::compareTo)
+                                                    .orElse(null))
+                            )
+                            .toList();
+                    future.complete(futureResponse);
+                })
+                .exceptionally(err -> {
+                    future.completeExceptionally(err);
+                    return null;
+                });
 
-        return companiesCalls.stream()
-                .map(CompletableFuture::join)
-                .flatMap(Collection::stream)
-                .toList();
+        return future;
     }
+
 
     /**
      * Fetch list os tickets, perform requests asynchronously using Virtual Threads
@@ -102,9 +118,8 @@ public class TicketService {
         List<Future<List<Ticket>>> futures;
 
         try {
-            futures = executorService.invokeAll(
-                    List.of(client::retrieveTicketAvailabilityFromClient1, client::retrieveTicketAvailabilityFromClient2)
-            );
+            futures = executorService
+                    .invokeAll(List.of(client::retrieveTicketAvailabilityFromClient1, client::retrieveTicketAvailabilityFromClient2));
         } catch (InterruptedException e) {
             throw new RuntimeException(e);
         }
